objects/TAM_Team_Member__c/TAM_Team_Member__c.object-meta.xml
<CustomObject>
    <label>TAM Team Member</label>
    <nameField>
        <label>TAM Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TAM Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>