objects/TAM_Team_Member__c/fields/Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Responsibility__c</fullName>
    <label>Responsibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TAM</fullName>
            </value>
            <value>
                <fullName>OTAM</fullName>
            </value>
            <value>
                <fullName>Primary TAM</fullName>
            </value>
            <value>
                <fullName>Secondary TAM</fullName>
            </value>
            <value>
                <fullName>TAM Architect</fullName>
            </value>
            <value>
                <fullName>CSM</fullName>
            </value>
            <value>
                <fullName>SME Lead</fullName>
            </value>
            <value>
                <fullName>SME Lead (Secondary)</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>Pod Lead</fullName>
            </value>
            <value>
                <fullName>Support Enabled</fullName>
            </value>
            <value>
                <fullName>Support Candidate</fullName>
            </value>
            <value>
                <fullName>Escalation Engineer</fullName>
            </value>
            <value>
                <fullName>Principal Escalation Engineer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>