objects/TAM_Team_Member__c/fields/Slack_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Slack_Member_ID__c</fullName>
    <label>Slack Member ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>