objects/TAM_Team_Member__c/fields/Slack_Name__c.field-meta.xml
<CustomField>
    <fullName>Slack_Name__c</fullName>
    <label>Slack Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>