objects/TAM_Team_Member__c/fields/TAM__c.field-meta.xml
<CustomField>
    <fullName>TAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TAM_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>