objects/TAM_Team_Member__c/fields/TAM_Team__c.field-meta.xml
<CustomField>
    <fullName>TAM_Team__c</fullName>
    <label>TAM Team</label>
    <referenceTo>TAM_Team__c</referenceTo>
    <relationshipLabel>TAM Team Members</relationshipLabel>
    <relationshipName>TAM_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>