objects/TAM_Team_Member__c/recordTypes/Escalation_Pod.recordType-meta.xml
<RecordType>
    <fullName>Escalation_Pod</fullName>
    <active>true</active>
    <label>Escalation Pod</label>
</RecordType>