objects/TAM_Team_Member__c/recordTypes/Escalation_SME.recordType-meta.xml
<RecordType>
    <fullName>Escalation_SME</fullName>
    <active>true</active>
    <label>Escalation SME</label>
</RecordType>