objects/TAM_Team_Member__c/recordTypes/Solution_Specialist.recordType-meta.xml
<RecordType>
    <fullName>Solution_Specialist</fullName>
    <active>true</active>
    <label>Solution Specialist</label>
</RecordType>