objects/TAM_Team_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Responsibility__c</columns>
    <columns>Slack_Name__c</columns>
    <columns>TAM__c</columns>
    <columns>TAM_Team__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>