objects/TAM_Team_Member__c/listViews/Escalation_SME.listView-meta.xml
<ListView>
    <fullName>Escalation_SME</fullName>
    <columns>Slack_Name__c</columns>
    <columns>TAM_Team__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>TAM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TAM_Team_Member__c.Escalation_SME</value>
    </filters>
    <label>Escalation SME</label>
</ListView>